Add package javadoc.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/core/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/core/package.html
@@ -2,11 +2,11 @@
 <html>
 <body bgcolor="white">
 
-Implementation of data-related scripting features.
+Core component of DtE.
 
 <h2>Package Specification</h2>
 
-Implementation of data-related scripting features.
+Core component of DtE. Currently it only has DataException.
 
 <!-- Put @see and @since tags down here. -->
 
