--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/impl/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/impl/package.html
@@ -2,11 +2,11 @@
 <html>
 <body bgcolor="white">
 
-Implementation of data-related scripting features.
+DtE API implementation component of behavior part.
 
 <h2>Package Specification</h2>
 
-Implementation of data-related scripting features.
+DtE API implementation component of behavior part.
 
 <!-- Put @see and @since tags down here. -->
 
