--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/odaconsumer/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/odaconsumer/package.html
@@ -2,11 +2,11 @@
 <html>
 <body bgcolor="white">
 
-Implementation of data-related scripting features.
+ODAconsumer component of DtE.
 
 <h2>Package Specification</h2>
 
-Implementation of data-related scripting features.
+ODAconsumer component of DtE, which provides the middle layer between ODA caller and ODA implementation.
 
 <!-- Put @see and @since tags down here. -->
 
