Updated package description for odaconsumer-related packages

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/odaconsumer/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/odaconsumer/package.html
@@ -2,11 +2,8 @@
 <html>
 <body bgcolor="white">
 
-ODAconsumer component of DtE.
-
-<h2>Package Specification</h2>
-
-ODAconsumer component of DtE, which provides the middle layer between ODA caller and ODA implementation.
+Provides the runtime framework in the BIRT Data Engine to manage and access data 
+from Open Data Access (ODA) data source providers.
 
 <!-- Put @see and @since tags down here. -->
 
