--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/validators/package.html
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/validators/package.html
@@ -10,7 +10,7 @@ Provides a number of validation classes for semantic check. Generally, semantic
 check is aimed to check property value against semantic rule. 
 
 Note: The classes used for value validation on single property are located in 
-{@link org.eclipse.birt.report.metadata.validator}.
+{@link org.eclipse.birt.report.model.metadata.validator}.
 
 <!-- Put @see and @since tags down here. -->
 
