Update the javadoc: add period, misssing tags and remove extra tags.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/command/package.html
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/command/package.html
@@ -11,8 +11,8 @@ The application modifies a report design using a set of <em>commands</em>.
 Each command does the following:
 <p>
 <ol>
-<li>Checks the arguments of the call.</ul>
-<li>Validates that the requested change is valid.</ul>
+<li>Checks the arguments of the call.</li>
+<li>Validates that the requested change is valid.</li>
 <li>Creates an <em>activity record</em> to perform the change in a way
 that can be undone.</li>
 </ol>
