JavaDoc update for Data Engine source code

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/executor/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/executor/package.html
@@ -1,14 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
+<head>
+<!--
+
+  @(#)package.html
+  
+ * Copyright (c) 2004, 2005 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation  - initial API and implementation
+ *******************************************************************************/
+
+-->
+</head>
 <body bgcolor="white">
+Data Engine INTERNAL package. Contains internal implementation of the ODI interface. <p>
 
-ODI API Implementation component of DtE.
-
-<h2>Package Specification</h2>
-
-ODI API Implementation component of DtE.
-
-<!-- Put @see and @since tags down here. -->
-
+ODI is a Data Engine internal API. Classes in this package are preliminary and are subject to 
+incompatible changes in the future.
 </body>
 </html>
