--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/core/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/core/package.html
@@ -1,14 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
+<head>
+<!--
+
+  @(#)package.html
+  
+ * Copyright (c) 2004, 2005 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation  - initial API and implementation
+ *******************************************************************************/
+
+-->
+</head>
 <body bgcolor="white">
-
-Core component of DtE.
-
-<h2>Package Specification</h2>
-
-Core component of DtE. Currently it only has DataException.
-
-<!-- Put @see and @since tags down here. -->
-
+Data Engine INTERNAL package. Contains common utility classes.
 </body>
 </html>
