--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/odaconsumer/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/odaconsumer/package.html
@@ -2,6 +2,8 @@
 <html>
 <body bgcolor="white">
 
+Data Engine INTERNAL package. <p>
+
 Provides the runtime framework in the BIRT Data Engine to manage and access data 
 from Open Data Access (ODA) data source providers.
 
