--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/script/package.html
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/script/package.html
@@ -1,14 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
+<head>
+<!--
+
+  @(#)package.html
+  
+ * Copyright (c) 2004, 2005 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation  - initial API and implementation
+ *******************************************************************************/
+
+-->
+</head>
 <body bgcolor="white">
+Data Engine INTERNAL package.<p>
 
-Implementation of data-related scripting features.
-
-<h2>Package Specification</h2>
-
-Implementation of data-related scripting features.
-
-<!-- Put @see and @since tags down here. -->
-
+This package contains classes that implement Data Engine's scripting feature. These classes should
+not be used by the Data Engine consumers.
 </body>
 </html>
