New ODA runtime support in the BIRT oda.jdbc driver

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/jdbc/package.html
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/jdbc/package.html
@@ -1,12 +1,30 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
+<head>
+<!--
+
+  @(#)package.html
+  
+ * Copyright (c) 2004, 2005 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation  - initial API and implementation
+ *******************************************************************************/
+
+-->
+</head>
+ 
 <body bgcolor="white">
 
-JDBC implemetation of ODA interface.
-
-<h2>Package Specification</h2>
-
-JDBC implemetation of ODA interface.
+This package contains classes that implement the JDBC-ODA Bridge Driver. 
+<p>
+ODA (Open Data Access) is the standard data extension protocol for providing external
+data access to BIRT. The JDBC-ODA Bridge Driver translates ODA API requests to JDBC
+calls, thus enabling access to JDBC data sources in BIRT reporting.
 
 <!-- Put @see and @since tags down here. -->
 
