--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/activity/package.html
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/activity/package.html
@@ -4,7 +4,7 @@
 
 Manages the low-level undoable operations and event
 notifications. See the comprehensive discussion in
-{@link org.eclipse.birt.report.model.activity.ActivityStack}.
+{@link org.eclipse.birt.report.model.api.activity.ActivityStack}.
 
 
 <!-- Put @see and @since tags down here. -->
