--- a/model/org.eclipse.birt.report.model/about.html
+++ b/model/org.eclipse.birt.report.model/about.html
@@ -27,7 +27,7 @@ Check the Redistributor's license that was provided with the Content. If no such
 license exists, contact the Redistributor. Unless otherwise indicated below, the 
 terms and conditions of the EPL still apply to any source code in the Content.</p>
 <H3><b><font face="Times New Roman" size="4"><span style="FONT-SIZE: 13.5pt">
-Redistributed Content</span></font></b></H3>
+Third Party Content</span></font></b></H3>
 <p>The Content includes items that have been sourced from third parties as 
 follows:</p>
 <H3><strong><span style="font-weight: 400">Commons codec</span></strong></H3>
