Updated third party content section for Flute 1.3

--- a/model/org.eclipse.birt.report.model/about.html
+++ b/model/org.eclipse.birt.report.model/about.html
@@ -41,4 +41,18 @@ http://jakarta.apache.org/commons/license.html</a>.. The binary code is located
 in Commons-codec-1.3.jar.</p>
 <p>&nbsp;</p>
 
+<H3><strong><span style="font-weight: 400">Flute ( SAC 1.3 )</span></strong></H3>
+<p>The plug-in is accompanied by software developed by W3C 
+(<a href="http://www.w3.org/Style/CSS/SAC/" >http://www.w3.org/Style/CSS/SAC/</a> ). 
+The flute 1.3 (which in turn includes CSS SAC ) binaries included with the plug-in 
+includes no modifications. 
+Your use of flute.jar and sac.jar in both source and binary code form contained 
+in the plug-in is subject to the terms and conditions of
+software license which is available at 
+<a href="http://www.w3.org/Consortium/Legal/copyright-software-19980720">http://www.w3.org/Consortium/Legal/copyright-software-19980720</a>. 
+The binary code is located in flue.jar, sac.jar.
+</p>
+<p>&nbsp;</p>
+
+
 </BODY></HTML>
