Update third party content

--- a/model/org.eclipse.birt.report.model/about.html
+++ b/model/org.eclipse.birt.report.model/about.html
@@ -30,29 +30,44 @@ terms and conditions of the EPL still apply to any source code in the Content.</
 Third Party Content</span></font></b></H3>
 <p>The Content includes items that have been sourced from third parties as 
 follows:</p>
-<H3><strong><span style="font-weight: 400">Commons codec</span></strong></H3>
-<p>The plug-in is accompanied by software developed by Apache(<a href="http://www.mozilla.org/rhino/"> 
-http://jakarta.apache.org/commons/codec/</a>). The Commons-codec 1.3 binaries 
-included with the plug-in includes no modifications. Your use of Commons-codec 
+<p><b>Simple API for CSS 1.3</b></p>
+<p>The plug-in is accompanied by software developed by W3C (
+<a href="http://www.w3.org/Style/CSS/SAC/">http://www.w3.org/Style/CSS/SAC/</a>). 
+The Simple API for CSS 1.3 binaries included with the plug-in includes no 
+modifications. Your use of Simple API for CSS 1.3 in both source and binary code 
+form contained in the plug-in is subject to the terms and conditions of the W3C 
+License which is available at
+<a href="http://www.w3.org/Consortium/Legal/2002/copyright-software-20021231">
+http://www.w3.org/Consortium/Legal/2002/copyright-software-20021231</a>. The 
+binary code is located in lib/sac.jar, lib/flute.jar.</p>
+<p><b>Commons codec 1.3</b></p>
+<p>The plug-in is accompanied by software developed by Apache (<a href="http://www.mozilla.org/rhino/"> 
+http://jakarta.apache.org/commons/codec/</a>). The Commons codec 1.3 binaries 
+included with the plug-in includes no modifications. Your use of Commons codec 
 1.3 in both source and binary code form contained in the plug-in is subject to 
-the terms and conditions of theApache Software License version 2.0 which is 
-available at <a href="http://jakarta.apache.org/commons/license.html">
-http://jakarta.apache.org/commons/license.html</a>.. The binary code is located 
-in Commons-codec-1.3.jar.</p>
-<p>&nbsp;</p>
-
-<H3><strong><span style="font-weight: 400">Flute ( SAC 1.3 )</span></strong></H3>
-<p>The plug-in is accompanied by software developed by W3C 
-(<a href="http://www.w3.org/Style/CSS/SAC/" >http://www.w3.org/Style/CSS/SAC/</a> ). 
-The flute 1.3 (which in turn includes CSS SAC ) binaries included with the plug-in 
-includes no modifications. 
-Your use of flute.jar and sac.jar in both source and binary code form contained 
-in the plug-in is subject to the terms and conditions of
-software license which is available at 
-<a href="http://www.w3.org/Consortium/Legal/copyright-software-19980720">http://www.w3.org/Consortium/Legal/copyright-software-19980720</a>. 
-The binary code is located in flue.jar, sac.jar.
-</p>
-<p>&nbsp;</p>
-
+the terms and conditions of the Apache Software License version 2.0 which is 
+available at <a href="http://www.apache.org/licenses/LICENSE-2.0.html">
+http://www.apache.org/licenses/LICENSE-2.0.html</a>. The binary code is located 
+in lib/commons-codec-1.3.jar.</p>
+<h3>Contributions</h3>
+<p>If this Content is licensed to you under the terms and conditions of the EPL, 
+any Contributions, as defined in the EPL, uploaded, submitted, or otherwise made 
+available to the Eclipse Foundation, its members and/or the host of the Eclipse 
+Foundation web site, by you that relate to such Content are provided under the 
+terms and conditions of the
+<a href="http://www.eclipse.org/legal/termsofuse.html">Terms of Use</a> for the 
+Eclipse Foundation web site and can be made available to others under the terms 
+of the licenses as set out in the
+<a href="http://www.eclipse.org/legal/termsofuse.html">Terms of Use</a>.</p>
+<p>If this Content is licensed to you under license terms and conditions other 
+than the EPL (&quot;Other License&quot;), any modifications, enhancements and/or other 
+code and/or documentation (&quot;Modifications&quot;) uploaded, submitted, or otherwise 
+made available to the Eclipse Foundation, members of the Eclipse Foundation 
+and/or the host of the Eclipse Foundation, by you that relate to such Content 
+are provided under terms and conditions of the Other License and can be made 
+available to others under the terms of the Other License. In addition, with 
+regard to Modifications for which you are the copyright holder, you are also 
+providing the Modifications under the terms and conditions of the EPL and such 
+Modifications can be made available to others under the terms of the CPL.</p>
 
 </BODY></HTML>
