--- a/core/org.eclipse.birt.core/about.html
+++ b/core/org.eclipse.birt.core/about.html
@@ -30,5 +30,15 @@ Your use of Rhino is subject to the terms and conditions of the Netscape Public 
 A copy of the NPL can be found in <a href="about_files/NPL-1.1.html">about_files/NPL-1.1.html</a> and is also available
 at <a href="http://www.mozilla.org/MPL/NPL-1.1.html">http://www.mozilla.org/MPL/NPL-1.1.html</a>.</p>
 
+<p><strong>Commons Codec 1.3</strong></p>
+
+<p>The plug-in is accompanied by software developed by the Apache Software Foundation at
+<a href="http://jakarta.apache.org/commons/codec/">http://jakarta.apache.org/commons/codec/</a>.
+The binary code of Commons Codec 1.3 (&quot;Commons Code&quot;) is included with the plug-in without modification in lib/commons-codec-1.3.jar.
+Your use of Commons Codec is subject to the terms and conditions of the Apache License, Version 2.0 (&quot;Apache License&quot;).
+A copy of the Apache License can be found in 
+<a href="../org.eclipse.birt.report.model/about_files/LICENSE-2.0.txt">about_files/LICENSE-2.0.txt</a>
+and is also available at <a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a>.</p>
+
 </body>
 </html>
